NTP Promos: Address issues found in UX review
These are subtle changes, covering:

- Better handling of long promo text (per updated design by UX)
- Padding edits
- Corner radius
- Differing promo width in 1 or 2 promo case
- Text line height

Bug: 448398823
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6998053
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1524438}

--- a/chrome/browser/resources/new_tab_page/ntp_promo/individual_promos.css
+++ b/chrome/browser/resources/new_tab_page/ntp_promo/individual_promos.css
@@ -11,15 +11,18 @@
   --ntp-promo-background: var(--color-sys-surface3);
   --ntp-promo-background-hovered: var(--color-sys-state-hover-on-subtle);
   --ntp-promo-border-radius: 12px;
-  --ntp-promo-element-spacing: 8px;
+  --ntp-promo-element-spacing: 16px;
   --ntp-promo-foreground: var(--color-sys-on-surface);
   --ntp-promo-icon-background: var(--color-sys-tonal-container);
   --ntp-promo-icon-foreground: var(--color-sys-on-tonal-container);
   --ntp-promo-action-icon-foreground: var(--color-sys-on-surface-subtle);
+  --ntp-promo-icon-border-radius: 8px;
   --ntp-promo-icon-size: 40px;
   --ntp-promo-icon-image-size: 20px;
   --ntp-promo-padding: 16px;
-  --ntp-promo-text-width: 345px;
+  --ntp-promo-text-line-height: 20px;
+  --ntp-promo-text-width: 382px;
+  --ntp-promo-text-width-multiple-promos: 256px;
   --ntp-promo-spacing: 8px;
 
   align-items: center;
@@ -43,6 +46,7 @@
 /* This styling includes overriding default <button> properties. */
 #promo {
   align-items: center;
+  align-self: stretch;
   background-color: var(--ntp-promo-background);
   border: none;
   border-radius: var(--ntp-promo-border-radius);
@@ -66,7 +70,7 @@
   --iron-icon-width: var(--ntp-promo-icon-image-size);
 
   background-color: var(--ntp-promo-icon-background);
-  border-radius: var(--ntp-promo-border-radius);
+  border-radius: var(--ntp-promo-icon-border-radius);
   box-sizing: border-box;
   color: var(--ntp-promo-icon-foreground);
   display: inline-block;
@@ -82,11 +86,15 @@
 
 #bodyText {
   display: inline-block;
-  flex: none;
-  line-height: 1;
+  line-height: var(--ntp-promo-text-line-height);
   margin-block: 0;
-  margin-inline: var(--ntp-promo-element-spacing);
+  vertical-align: middle;
   width: var(--ntp-promo-text-width);
+
+}
+
+#bodyText.multiplePromos {
+  width: var(--ntp-promo-text-width-multiple-promos);
 }
 
 #actionIcon {
@@ -98,13 +106,10 @@
   color: var(--ntp-promo-action-icon-foreground);
   display: inline-block;
   flex: none;
-  height: var(--ntp-promo-icon-size);
+  height: var(--ntp-promo-icon-image-size);
   margin: 0;
-  padding: calc(
-    (var(--ntp-promo-icon-size) - var(--ntp-promo-icon-image-size)) / 2
-  );
   text-align: center;
-  width: var(--ntp-promo-icon-size);
+  width: var(--ntp-promo-icon-image-size);
 }
 
 #actionIcon:dir(rtl) {
