--- a/chrome/browser/resources/new_tab_page/ntp_promo/setup_list_item.css
+++ b/chrome/browser/resources/new_tab_page/ntp_promo/setup_list_item.css
@@ -17,11 +17,15 @@
   --setup-list-completed-foreground: var(--color-sys-state-disabled);
   --setup-list-completed-icon-background: var(--color-sys-tertiary-container);
   --setup-list-completed-icon-foreground: var(--color-sys-on-surface-subtle);
-  --setup-list-element-spacing: 24px;
+  --setup-list-element-spacing: 16px;
   --setup-list-icon-background: var(--color-sys-tonal-container);
+  --setup-list-icon-border-radius: 8px;
   --setup-list-icon-size: 40px;
   --setup-list-icon-image-size: 20px;
-  --setup-list-text-max-width: 345px;
+  --setup-list-padding: 12px;
+  --setup-list-padding-end: 16px;
+  --setup-list-text-line-height: 20px;
+  --setup-list-text-width: 370px;
 
   display: flex;
 }
@@ -36,7 +40,9 @@
   display: flex;
   flex-grow: 1;
   font: inherit;
+  gap: var(--setup-list-element-spacing);
   padding: var(--setup-list-padding);
+  padding-inline-end: var(--setup-list-padding-end);
   text-align: start;
 }
 
@@ -49,7 +55,7 @@
   --iron-icon-width: var(--setup-list-icon-image-size);
 
   background-color: var(--setup-list-icon-background);
-  border-radius: var(--setup-list-border-radius);
+  border-radius: var(--setup-list-icon-border-radius);
   box-sizing: border-box;
   color: var(--setup-list-icon-foreground);
   display: inline-block;
@@ -68,14 +74,11 @@
 }
 
 #bodyText {
-  color: var(--setup-list-foreground);
   display: inline-block;
-  flex: 1;
+  line-height: var(--setup-list-text-line-height);
   margin-block: 0;
-  margin-inline: var(--setup-list-element-spacing);
-  max-width: var(--setup-list-text-max-width);
+  width: var(--setup-list-text-width);
   vertical-align: middle;
-  flex-grow: 1;
 }
 
 .completed #bodyText {
@@ -90,13 +93,10 @@
   box-sizing: border-box;
   color: var(--setup-list-action-icon-foreground);
   display: inline-block;
-  height: var(--setup-list-icon-size);
+  height: var(--setup-list-icon-image-size);
   margin: 0;
-  padding: calc(
-    (var(--setup-list-icon-size) - var(--setup-list-icon-image-size)) / 2
-  );
   text-align: center;
-  width: var(--setup-list-icon-size);
+  width: var(--setup-list-icon-image-size);
 }
 
 #actionIcon:dir(rtl) {
